--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,10 @@ pyarrow==21.0.0
 pydantic==2.11.7
 pydantic_core==2.33.2
 pydeck==0.9.1
+pytest==8.3.4
+pytest-cov==6.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-slugify==8.0.4
 pytimeparse==1.1.8
 pytz==2025.2
@@ -77,3 +80,4 @@ typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
 zipp==3.23.0
+watchdog==6.0.0
