🎯 Production-ready Monte Carlo Data Observability Platform
✨ Major Updates:
- Consolidated 520-line dashboard with enterprise architecture
- Professional project structure: src/, database/, comprehensive automation
- 100% accurate documentation with corrected paths and metrics
- Enhanced setup.sh (340 lines) for one-command deployment
- Comprehensive README.md with enterprise scenarios and troubleshooting
- Database connection issues resolved and tested
- All credentials properly secured and ignored

🔧 Technical Improvements:
- Streamlit dashboard with Live Monitor, AI Analysis, Data Overview tabs
- Real-time file monitoring and data ingestion
- AI-powered data quality analysis with OpenAI integration
- Professional folder organization and path resolution
- Complete test suite with updated imports and configurations

🛡️ Security:
- All sensitive credentials properly excluded via .gitignore
- Safe .env.example with placeholder values
- Database files ignored and secure

📋 Ready for Demo:
- 6 enterprise datasets with 20+ records each
- 17 sample files for live demonstration scenarios
- Automated setup, data loading, and dashboard launch
- Enterprise naming conventions and realistic data patterns

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
-# .env.example
+# Environment Configuration for Monte Carlo Demo
+# Copy this file to .env and replace with your actual credentials
 
-OPENAI_API_KEY=your-key-here
-OPENAI_ORGANIZATION=your-org-id
-OPENAI_PROJECT=your-project-id
-DUCKDB_PATH=/full/path/to/monte-carlo.duckdb
+# Required for AI analysis features
+OPENAI_API_KEY=sk-proj-your-openai-api-key-here
+OPENAI_ORGANIZATION=org-your-organization-id-here
+OPENAI_PROJECT=proj-your-project-id-here
+
+# Database configuration
+DUCKDB_PATH=database/monte-carlo.duckdb
+LOG_LEVEL=INFO
