--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# Monte Carlo Demo - Clean Requirements
-# Core functionality: Live dashboard, dbt, AI analysis, file monitoring
+# Monte Carlo Demo - Complete Requirements
+# Core functionality: Live dashboard, dbt, AI analysis, file monitoring + Monte Carlo SDK
 streamlit==1.47.1
 duckdb==1.3.2
 dbt-core==1.10.5
@@ -9,3 +9,9 @@ python-dotenv==1.0.1
 pandas==2.3.1
 watchdog==6.0.0
 pytest==8.3.4
+
+# Monte Carlo SDK Integration (optional - for production)
+# Uncomment when ready to connect to real Monte Carlo platform:
+# pycarlo>=0.5.0
+# PyYAML>=6.0
+# requests>=2.31.0
