📋 Add personal.md to main-staging branch
• Include comprehensive presentation guide in staging branch
• Updated .gitignore to allow personal.md in main-staging
• Maintains clean separation: staging has full materials, main stays clean
• Enables complete development workflow with presentation materials

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,6 @@ build/
 dist/
 *.egg-info/
 
-# Markdown files
-personal.md
+# Personal files (exclude from main branch only)
+# personal.md - commented out to allow in main-staging
 
