feat: enhance Monte Carlo production integration
- Add Monte Carlo credentials to .env.example template
- Include API ID/token configuration for production mode
- Add demo mode override option for testing
- Update documentation for production setup workflow
- Remove temporary production readiness test file
- Add database files from comprehensive testing

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ OPENAI_API_KEY=sk-proj-your-openai-api-key-here
 OPENAI_ORGANIZATION=org-your-organization-id-here
 OPENAI_PROJECT=proj-your-project-id-here
 
+# Monte Carlo Data Platform Integration
+# Obtain these from https://getmontecarlo.com/settings/api
+MONTE_CARLO_API_ID=your-monte-carlo-api-id-here
+MONTE_CARLO_API_TOKEN=your-monte-carlo-api-token-here
+# Optional: Force demo mode even with credentials (for testing)
+# MONTE_CARLO_DEMO_MODE=true
+
 # Database configuration
 DUCKDB_PATH=database/monte-carlo.duckdb
 LOG_LEVEL=INFO
