--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,7 @@ pandas==2.3.1
 watchdog==6.0.0
 pytest==8.3.4
 
-# Monte Carlo SDK Integration (optional - for production)
-# Uncomment when ready to connect to real Monte Carlo platform:
-# pycarlo>=0.5.0
-# PyYAML>=6.0
-# requests>=2.31.0
+# Monte Carlo SDK Integration
+pycarlo==0.10.51
+PyYAML>=6.0
+requests>=2.31.0
