Fix CI workflow: Update to version-free requirements and reorganize project structure
- Remove version constraints from requirements.txt to always install latest packages
- Create missing config.py and load_csv.py scripts for CI pipeline
- Reorganize files: move scripts to scripts/ folder, database to database/ folder
- Update CI workflow paths and database references
- Update all documentation to remove version-specific installation commands
- Ensure consistency across all package references in codebase

Fixes: CI failure due to unavailable streamlit==1.47.1 version
All tests passing with new structure and version-free dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
     
     - name: Validate configuration
       run: |
-        python config.py
+        python scripts/config.py
       env:
         OPENAI_API_KEY: dummy-key-for-testing
         OPENAI_ORGANIZATION: dummy-org
@@ -72,14 +72,14 @@ jobs:
           outputs:
             dev:
               type: duckdb
-              path: './monte-carlo.duckdb'
+              path: './database/monte-carlo.duckdb'
               threads: 4
         EOF
     
     - name: Load test data
       run: |
         pip install pandas duckdb
-        python load_csv.py
+        python scripts/load_csv.py
     
     - name: Run dbt
       run: |
