Complete project updates: terminology consistency, file reorganization, and professional positioning
- Updated all 'production-ready' language to 'professional' for accurate positioning
- Moved _config.yml to docs/ folder for proper Jekyll organization
- Removed generate_test_csv.py (no longer needed)
- Added branch-manager.sh to .gitignore for staging-only workflow
- Updated documentation consistency across README, GitHub Pages, and dashboard
- Maintained version-free requirements.txt for latest package installations
- Comprehensive testing shows all components working (10/10 test categories passed)

Project now accurately represents itself as a professional demonstration platform
showcasing enterprise-grade data engineering patterns and best practices.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ dist/
 # Personal files (exclude from main branch only)
 # personal.md - commented out to allow in main-staging
 
+# Development scripts (staging branch only)
+scripts/branch-manager.sh
+
