--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,12 @@ jobs:
               path: './database/monte-carlo.duckdb'
               threads: 4
         EOF
-    
+
+    - name: Create DuckDB database file if missing
+      run: |
+        mkdir -p database
+        python -c "import duckdb; duckdb.connect('database/monte-carlo.duckdb').close()"
+
     - name: Load test data
       run: |
         pip install pandas duckdb
