--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,14 +72,14 @@ jobs:
           outputs:
             dev:
               type: duckdb
-              path: './database/monte-carlo.duckdb'
+              path: './monte_carlo_dbt/database/monte-carlo.duckdb'
               threads: 4
         EOF
 
     - name: Create DuckDB database file if missing
       run: |
-        mkdir -p database
-        python -c "import duckdb; duckdb.connect('database/monte-carlo.duckdb').close()"
+        mkdir -p monte_carlo_dbt/database
+        python -c "import duckdb; duckdb.connect('monte_carlo_dbt/database/monte-carlo.duckdb').close()"
 
     - name: Load test data
       run: |
