Update DuckDB path from database/ to monte_carlo_dbt/database/
- Updated all references to use monte_carlo_dbt/database/monte-carlo.duckdb
- Modified configuration files (.env.example, README.md)
- Updated scripts (load_csv.py, setup.sh)
- Updated CI/CD workflow (.github/workflows/ci.yml)
- Updated application code (src/monte_carlo_dashboard.py)
- Updated tests (tests/test_basic.py)
- Updated .gitignore for new database location
- All tests passing with new database path
- Verified dbt integration working correctly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
           outputs:
             dev:
               type: duckdb
-              path: './database/monte-carlo.duckdb'
+              path: './monte_carlo_dbt/database/monte-carlo.duckdb'
               threads: 4
         EOF
 
