--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 venv/
 
 # Database files  
-database/monte-carlo.duckdb
+monte_carlo_dbt/database/monte-carlo.duckdb
 database/*.db
 database/*.sqlite
 
