--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
 
     # Add this step here
     - name: List database directory contents
-      run: ls -l database
+      run: ls -l monte_carlo_dbt/database/
     
     - name: Run dbt
       run: |
